--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 black>=19.3b0, <=22.12
 isort>=5.7
+lifeline==0.30.0
 mypy>=0.910
 nbqa>=1.9
 pandas>=2
 pre-commit>=2.13
 pylint>=2.9
 scikit-learn<=1.5.2
+scipy>=1.14
+seaborn==0.13.2
